Connect to MongoDB

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "dotenv": "^15.0.1",
+    "env": "^0.0.2",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.10"
   }
 }
