--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^15.0.1",
     "env": "^0.0.2",
     "express": "^4.17.2",
-    "mongoose": "^6.1.10"
+    "mongoose": "^6.1.10",
+    "mongoose-slug-plugin": "^2.1.0"
   }
 }
